[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "guardtower"
dynamic = ["version"]
description = "Catch silent fine-tuning bugs (LoRA/PEFT, DDP/FSDP, gradient & optimizer wiring) before you waste GPU-hours."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Tjark Neumann" }]
keywords = ["pytorch", "machine-learning", "debugging", "training", "sanity-check", "mlops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["torch>=1.12"]

[project.optional-dependencies]
test = ["pytest>=7"]
hf = ["transformers>=4.30"]

[project.urls]
Homepage = "https://github.com/tjark-neumann/guardtower"
Issues = "https://github.com/tjark-neumann/guardtower/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/guardtower/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/guardtower"]
